[tool.poetry]
name = "credpoll"
version = "0.1.0"
description = ""
authors = ["Apurva Goenka <apurva.goenka2@aon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
credpoll = "credpoll.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
